<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:entries="@array/opciones" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="54dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/rb_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opcion1" />

            <RadioButton
                android:id="@+id/rb_30"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:text="@string/opcion2" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="54dp" />

            <CheckBox
                android:id="@+id/cb_pago20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opcionck1" />

            <CheckBox
                android:id="@+id/cb_complemento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opcionck2" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="54dp" />

            <Button
                android:id="@+id/bt_datos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bt1" />
        </RadioGroup>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>